--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-	"python.pythonPath": "/bin/python"
+	"python.pythonPath": "/bin/python",
+	"python.analysis.extraPaths": [
+		"./ProblemSet4"
+	]
 }
